[package]
name = "refuel-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
anyhow = "1.0.56"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "macros" ] }
