[package]
name = "refuel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = [ "tokio" ] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
tracing-appender = "0.2.2"
dirs = "4.0.0"
refuel-core = { path = "../refuel-core/" }
